Make sure both checkboxes and radio buttons align with the text baseline by default.
git-svn-id: http://opensource.55minutes.com/svn/web/trunk/scaffolding-with-compass@515 3a26569e-5468-0410-bb2f-b495330926e5

--- a/styles/screen.css
+++ b/styles/screen.css
@@ -331,6 +331,11 @@ input[type=text].small {
 
 /*-----[ buttons and checkboxes]------------------------------------------------
 */
+input[type=checkbox],
+input[type=radio] {
+  vertical-align: baseline;
+}
+
 input[type=checkbox] {
   border: 1px solid #505050;
   background-color: white;
